--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--This layout is used by org.devio.rn.splashscreen.SplashScreen.java-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_splash"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="UnusedResources">
 </LinearLayout>
