Updated android icons

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#4051DB</color>
-    <color name="launcher_background">#3740c0</color>
+    <color name="launcher_background">#2babe3</color>
 </resources>
