--- a/ios/COVIDSafePaths/Base.lproj/LaunchScreen.xib
+++ b/ios/COVIDSafePaths/Base.lproj/LaunchScreen.xib
@@ -12,16 +12,18 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BgImage" translatesAutoresizingMaskIntoConstraints="NO" id="q8g-oj-mOm">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoImage" translatesAutoresizingMaskIntoConstraints="NO" id="q8g-oj-mOm">
+                    <rect key="frame" x="190" y="190" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="EXe-K5-Sov"/>
+                        <constraint firstAttribute="height" constant="100" id="n6f-I6-D0G"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="q8g-oj-mOm" secondAttribute="trailing" id="eLU-6Q-dhg"/>
-                <constraint firstItem="q8g-oj-mOm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ulo-5x-fqz"/>
-                <constraint firstAttribute="bottom" secondItem="q8g-oj-mOm" secondAttribute="bottom" id="weB-dv-ieB"/>
-                <constraint firstItem="q8g-oj-mOm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="z2i-7B-Xtj"/>
+                <constraint firstItem="q8g-oj-mOm" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bgz-o7-bCb"/>
+                <constraint firstItem="q8g-oj-mOm" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="oiS-aV-r80"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -29,6 +31,6 @@
         </view>
     </objects>
     <resources>
-        <image name="BgImage" width="375" height="812"/>
+        <image name="logoImage" width="512" height="512"/>
     </resources>
 </document>
